<resources>
    <string name="Accept">Accept</string>
    <string name="AcceptSign">Accept?</string>
    <string name="Accomplishments">Accomplishments</string>
    <string name="Action">Action</string>
    <string name="Activate">Activate</string>
    <string name="AddIndividualTrainingQuestion">Do you want to give individual training to player {0} for ⭐{1:N0}?</string>
    <string name="AddedFriend">You are now friends with {0}.</string>
    <string name="Advantage">Advantage</string>
    <string name="Age">Age</string>
    <string name="AgeValue">Age:</string>
    <string name="All">All</string>
    <string name="AlreadyHaveTeamWithFacebook">You already have a team connected with Facebook.</string>
    <string name="Amount">Amount</string>
    <string name="AnyLanguage">Any language</string>
    <string name="AsStandard">As standard</string>
    <string name="Auction">Auction</string>
    <string name="AuctionEnd">Auction end soon</string>
    <string name="AuctionEndTime">Auction end time</string>
    <string name="AuctionFinished">Auction finished</string>
    <string name="AuctionOverbid">Auction overbid</string>
    <string name="Audience">Attendance</string>
    <string name="AudienceEarnings">Spectator earnings</string>
    <string name="Average">Average</string>
    <string name="Away">Away</string>
    <string name="AwayTable">Away table</string>
    <string name="Back">Back</string>
    <string name="Balance">Balance</string>
    <string name="BallControl">Ball control</string>
    <string name="BasicAmount">Basic amount per match</string>
    <string name="BecomeFriends">Become friends</string>
    <string name="Bid">Bid</string>
    <string name="BidsFavourites">Bids / Favourites</string>
    <string name="BiggestDefeat">Biggest defeat</string>
    <string name="BiggestWin">Biggest win</string>
    <string name="Book">Book</string>
    <string name="BookTrainingCampQuestion">Do you wish to book the training camp now for ⭐{0:N0}?</string>
    <string name="Booked">Booked</string>
    <string name="BookedSign">Booked!</string>
    <string name="BudgetLimitText">Set budget as limit</string>
    <string name="Build">Build</string>
    <string name="BuildProgress">Build progress:</string>
    <string name="BuildingCompleted">Building completed</string>
    <string name="BuildingInProgressMessage">An expansion is currently underway. You must finish current expansion work before building further!</string>
    <string name="BuildingInProgressTitle">Upgrade in progress</string>
    <string name="BuildingRequirementText">Office level {0} is required for expansion.</string>
    <string name="BuildingSpeedupQuestion">Do you want to finish upgrade {0} for ⭐{1:N0}?</string>
    <string name="BuildingSpeedupTitle">Speedup upgrade</string>
    <string name="BuildingUpgradeQuestion">Do you wish to upgrade {0} for ⭐{1:N0}?</string>
    <string name="BuildingUpgradeStadiumQuestion">Do you wish to upgrade stadium places for ⭐{0:N0}?</string>
    <string name="BuildingUpgradeTitle">Upgrade</string>
    <string name="Buy">Buy</string>
    <string name="BuyEmblems">Buy an emblem</string>
    <string name="BuyEmblemsQuestion">Do you want to buy this emblem for ⭐{0:N0}?</string>
    <string name="BuyMedipacks">Buy Medipacks</string>
    <string name="BuyMedipacksQuestion">Do you wish to purchase {0} medipacks for ⭐{1:N0}?</string>
    <string name="BuyShirts">Buy a shirt</string>
    <string name="BuyShirtsQuestion">Do you want to buy this shirt for ⭐{0:N0}?</string>
    <string name="BuyStars">Buy ⭐</string>
    <string name="CampDialog">You can power up your training result by renting a training camp.</string>
    <string name="CampEffect_0_0">+{0:N1} Defence</string>
    <string name="CampEffect_0_1">+{0:N1} Keeping</string>
    <string name="CampEffect_0_2">+{0:N1} Shots</string>
    <string name="CampEffect_0_3">+{0:N1} Playmaking</string>
    <string name="CampEffect_1_0">+{0:N1} Passing</string>
    <string name="CampEffect_1_1">+{0:N1} Ball Control</string>
    <string name="CampEffect_1_2">+{0:N1} Duel</string>
    <string name="CampEffect_1_3">+{0:N1} One on one</string>
    <string name="CampEffect_1_4">+{0:N1} Header</string>
    <string name="CampEffect_1_5">+{0:N1} Speed</string>
    <string name="CampEffect_1_6">+{0:N1} Flanks</string>
    <string name="CampEffect_1_7">+{0:N1} Cornerkick</string>
    <string name="CampEffect_1_8">+{0:N1} Freekicks</string>
    <string name="CampEffect_1_9">+{0:N1} Penalty</string>
    <string name="CampEffect_2_0">+{0:N1} Experience</string>
    <string name="Cancel">Cancel</string>
    <string name="Captain">Captain</string>
    <string name="CareerEndInfo">The player will retire at the end of the season. Please make sure that you have replacements on time!</string>
    <string name="Category">Category</string>
    <string name="Challenge">Challenge</string>
    <string name="Challenged">Challenged</string>
    <string name="Challenges">Challenges</string>
    <string name="ChallengesAcceptQuestion">"Do you wish to accept {0}'s challenge to a friendly match?"</string>
    <string name="ChallengesAcceptTitle">Accept challenge</string>
    <string name="ChampionshipBonus">Championship bonus</string>
    <string name="Change">Change</string>
    <string name="ChangeClubName">Change club name</string>
    <string name="ChangeClubNameDescription">"You can change your club's name here."</string>
    <string name="ChangeFormationSystem">If you change your formation, your squad will be lost. Do you want to continue?</string>
    <string name="ChangeName">Change name</string>
    <string name="ChangeNameQuestion">"Would you like to change {0}'s name to {1} now for ⭐{2:N0}?"</string>
    <string name="ChangeOrigin">Change origin</string>
    <string name="ChangeOriginPopupText">Select another country of origin for {0}.</string>
    <string name="ChangeOriginQuestion">"Would you like to change {0}'s origin to {1} now for ⭐{2:N0}?"</string>
    <string name="ChangePlayerName">Change player name</string>
    <string name="ChangePlayerNamePopupText">Enter a new name for {0}.</string>
    <string name="ChangeShirtNrQuestion">Would you like to change the number of {0} to {1} for ⭐{2:N0}?</string>
    <string name="ChangesSaved">Changes saved</string>
    <string name="CheckLineup">Check Lineup</string>
    <string name="ChoosePosition">Choose position</string>
    <string name="Club">Club</string>
    <string name="ClubManagement">Club management</string>
    <string name="ClubName">Club name</string>
    <string name="Colon">:</string>
    <string name="Compare">Compare</string>
    <string name="CompareChallengeClub">Do you want challenge {0} to a friendly match?</string>
    <string name="CompleteIn">Complete in:</string>
    <string name="Contract">Contract</string>
    <string name="ContractEnded">Player contract ended</string>
    <string name="ContractHasExpired">Contract for this player has expired.</string>
    <string name="ContractRenewButton">Extend now</string>
    <string name="ContractRenewNotPossible">You cannot currently extend the contract. A contract can only be extended during the season in which it expires. Wait until next season.</string>
    <string name="ContractRenewText">"Would you like to extend your contract with {0}?
The new contract will therefore end on {1}.

The player will receive a new salary of €{2:N0} per game day."</string>
    <string name="ContractRenewTitle">Extend player contract</string>
    <string name="ContractUntil">Contract until</string>
    <string name="ContractUntilValue">Contract until:</string>
    <string name="Cornerkick">Cornerkick</string>
    <string name="Corners">Corners</string>
    <string name="CurrentBid">Current bid</string>
    <string name="DailyLoginMessage">The main sponsor has credited you with ⭐{0:N0} for your daily login!</string>
    <string name="Date">Date</string>
    <string name="Day">day</string>
    <string name="Days">days</string>
    <string name="Declined">Declined</string>
    <string name="Deconstruct">Deconstruct</string>
    <string name="DeconstructionQuestion">Do you wish to begin deconstruction now?</string>
    <string name="DeconstructionTitle">Deconstruction</string>
    <string name="DecreaseInValue">Decrease in:</string>
    <string name="Defeat">Defeat!</string>
    <string name="Defence">Defence</string>
    <string name="DefenceValue">Defence:</string>
    <string name="Defender">Defender</string>
    <string name="DeleteMessage">Delete mail</string>
    <string name="DeleteRead">Delete all read</string>
    <string name="Details">Details</string>
    <string name="DissmissLadderMatchRunning">A game is in progress. Please wait until it has finished.</string>
    <string name="Draw">Draw!</string>
    <string name="DrawsAbbreviation">D</string>
    <string name="Duel">Duel</string>
    <string name="Duration">Duration</string>
    <string name="Earnings">Earnings</string>
    <string name="EndAuction">End of auction</string>
    <string name="EndFriendship">Cancel friendship</string>
    <string name="EnterNewName">Enter new name...</string>
    <string name="Equipment">Equipment</string>
    <string name="ErrorMessage">Something went wrong.</string>
    <string name="Experience">Experience</string>
    <string name="Facebook">Connect</string>
    <string name="FacebookTitle">Connect with Facebook</string>
    <string name="Fans">Fans</string>
    <string name="Favourite">Favourite</string>
    <string name="FinanceHistory">Finance history</string>
    <string name="Finances">Finances</string>
    <string name="Finish">Finish</string>
    <string name="FirePlayer">Fire player</string>
    <string name="FirePlayerQuestion">Are you sure you want to fire the player {0} from your team?</string>
    <string name="Fitness">Fitness</string>
    <string name="FixtureList">Fixture list</string>
    <string name="FlagCollection">Flag collection</string>
    <string name="Flanks">Flanks</string>
    <string name="FormationAbbreviation">F.</string>
    <string name="Foundation">Foundation</string>
    <string name="FreeKicks">Free kicks</string>
    <string name="FreeStars">Free ⭐</string>
    <string name="Freekick">Free kicks</string>
    <string name="FriendInvite">Friend invite</string>
    <string name="FriendInviteShareText">{0} has invited you to play Goal Tactics. Join now and become a successful Soccer Manager!</string>
    <string name="FriendlyMatch">Friendly match</string>
    <string name="FriendlyMatchRequests">Friendly match requests</string>
    <string name="FriendsInviteFacebook">Invite with Facebook</string>
    <string name="FriendsInviteMessenger">Invite with Messenger</string>
    <string name="FriendsInviteOther">Other</string>
    <string name="FriendsInviteText">Invite your friends to Goal Tactics, to play with them, challenge each other in friendly matches and get rewards for mutual support.</string>
    <string name="FriendsInviteWhatsApp">Invite with WhatsApp</string>
    <string name="IneffectiveTraining">Ineffective training</string>
    <string name="LineupIncomplete">Lineup incomplete</string>
    <string name="MarketValueSign">Market value:</string>
    <string name="MatchResults">Match results</string>
    <string name="Ok">Ok</string>
    <string name="OriginValue">Origin:</string>
    <string name="Player">Player</string>
    <string name="PositionValue">Position:</string>
    <string name="QualityValue">Quality:</string>
    <string name="ReturnInvite">Return invite</string>
    <string name="SalaryValue">Salary:</string>
    <string name="SeasonInformation">Season information</string>
    <string name="SingleTrainingExpired">Individual training expired</string>
    <string name="SponsorExpired">Sponsor expired</string>
    <string name="StrengthValue">Strength:</string>
    <string name="SystemMessages">System messages</string>
    <string name="TalentValue">Talent:</string>
</resources>